--- a/webroot/css/home.css
+++ b/webroot/css/home.css
@@ -13,6 +13,10 @@
 body {
     padding: 60px 0;
 }
+main{
+    height: 100vh;
+    width: 100vw;
+}
 header {
     margin-bottom: 60px;
 }
@@ -73,3 +77,5 @@ hr {
 #url-rewriting-warning {
     display: none;
 }
+
+
